<resources>
    <string name="app_name" translatable="false">Todo List</string>
    <string name="btnAddNoteDescription">Кнопка добавления новой заметки</string>
    <string name="btnSaveNoteText">Сохранить заметку</string>
    <string name="btnCloseNoteAddingScreenText">Закрыть</string>
    <string name="noteAddingScreenTitleText">Создание заметки</string>
    <string name="rbLowPriorityText">Низкий</string>
    <string name="rbMediumPriority">Средний</string>
    <string name="choosePriorityTitleText">Выберите приоритет:</string>
    <string name="etNoteTextInputBoxTitleText">Введите текст заметки:</string>
    <string name="etNoteTextInputBoxHint">Например, сходить в магазин</string>
    <string name="btnCloseNoteAddingScreenDescription">Кнопка закрытия окна добавления заметки</string>
    <string name="rbHighPriority">Высокий</string>
    <string name="emptyNoteTextToastText">Заметка не может быть пустой!</string>
    <string name="empty_notes_placeholder_text_full">Упс! Похоже, что список заметок пуст!</string>
    <string name="empty_notes_placeholder_text_2nd_part">Похоже, что список заметок пуст!</string>
    <string name="empty_notes_placeholder_text_1st_part">Упс...</string>
    <string name="placeholder_new_note_btn">Добавить заметку</string>
    <string name="empty_list_img_description_text">Список пуст</string>
</resources>