<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/noteAddingScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/noteAddingScreenTitleText"
        android:textSize="26sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/btnCloseNoteAddingScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCloseNoteAddingScreen" />


    <Button
        android:id="@+id/btnCloseNoteAddingScreen"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:drawableEnd="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:backgroundTint="@color/close_btn_bg"

        android:contentDescription="@string/btnCloseNoteAddingScreenDescription"
        />

    <View
        android:id="@+id/headerSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/separator_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCloseNoteAddingScreen" />


    <TextView
        android:id="@+id/etNoteTextInputBoxTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etNoteTextInputBoxTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerSeparator"

        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/etNoteTextInputBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"

        android:hint="@string/etNoteTextInputBoxHint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTextInputBoxTitle" />

    <TextView
        android:id="@+id/choosePriorityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choosePriorityTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTextInputBox"

        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        />

    <RadioGroup
        android:id="@+id/rgChoosePriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosePriorityTitle">

        <RadioButton
            android:id="@+id/rbLowPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:textAlignment="center"
            android:background="@color/low_priority_inactive"
            android:textSize="20sp"
            android:textColor="@color/inactive_rb_text_color"
            android:textStyle="normal"
            android:text="@string/rbLowPriorityText" />

        <RadioButton
            android:id="@+id/rbMediumPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:textAlignment="center"
            android:background="@color/medium_priority_inactive"
            android:textSize="20sp"
            android:textColor="@color/inactive_rb_text_color"
            android:textStyle="normal"
            android:text="@string/rbMediumPriority" />

        <RadioButton
            android:id="@+id/rbHighPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:textAlignment="center"
            android:background="@color/high_priority_inactive"
            android:textSize="20sp"
            android:textColor="@color/inactive_rb_text_color"
            android:textStyle="normal"
            android:text="@string/rbHighPriority" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveNote"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/btnSaveNoteText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgChoosePriority"/>

</androidx.constraintlayout.widget.ConstraintLayout>